--- a/IG_HTML_project.html
+++ b/IG_HTML_project.html
@@ -38,7 +38,7 @@
     <canvas id="webgl-canvas"></canvas>
     <div id="controls">
         <button id="reset-button">Restart Animation</button>
-
+        <button id="reload-button">New Animation</button>
         <!-- Velocity Display -->
         <div>
             <label>Velocity X: <span id="velocityX">0.00</span></label>
